--- a/app/src/main/res/layout/fragment_language_support.xml
+++ b/app/src/main/res/layout/fragment_language_support.xml
@@ -69,7 +69,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical">
 
-                                <com.hbb20.CountryCodePicker
+                                <com.countrypicker.CountryCodePicker
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     app:ccpLanguage="ARABIC"
@@ -91,7 +91,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical">
 
-                                <com.hbb20.CountryCodePicker
+                                <com.countrypicker.CountryCodePicker
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     app:ccpLanguage="CHINESE"
@@ -113,7 +113,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical">
 
-                                <com.hbb20.CountryCodePicker
+                                <com.countrypicker.CountryCodePicker
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     app:ccpLanguage="ENGLISH"
@@ -135,7 +135,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical">
 
-                                <com.hbb20.CountryCodePicker
+                                <com.countrypicker.CountryCodePicker
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     app:ccpLanguage="HINDI"
@@ -156,7 +156,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical">
 
-                                <com.hbb20.CountryCodePicker
+                                <com.countrypicker.CountryCodePicker
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     app:ccpLanguage="GERMAN"
@@ -178,7 +178,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical">
 
-                                <com.hbb20.CountryCodePicker
+                                <com.countrypicker.CountryCodePicker
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     app:ccpLanguage="RUSSIAN"
@@ -270,7 +270,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
 
-                            <com.hbb20.CountryCodePicker
+                            <com.countrypicker.CountryCodePicker
                                 android:id="@+id/ccp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
