--- a/app/src/main/res/layout/fragment_country_preference.xml
+++ b/app/src/main/res/layout/fragment_country_preference.xml
@@ -117,7 +117,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_vertical">
 
-                                    <com.hbb20.CountryCodePicker
+                                    <com.countrypicker.CountryCodePicker
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         app:countryPreference="US,IN,NZ"
@@ -203,7 +203,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
 
-                            <com.hbb20.CountryCodePicker
+                            <com.countrypicker.CountryCodePicker
                                 android:id="@+id/ccp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content" />
