--- a/app/src/main/res/layout/fragment_custom_color.xml
+++ b/app/src/main/res/layout/fragment_custom_color.xml
@@ -55,7 +55,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
-                            <com.hbb20.CountryCodePicker
+                            <com.countrypicker.CountryCodePicker
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 app:contentColor="@android:color/holo_orange_dark"
@@ -137,7 +137,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
-                            <com.hbb20.CountryCodePicker
+                            <com.countrypicker.CountryCodePicker
                                 android:id="@+id/ccp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
