--- a/app/src/main/res/layout/fragment_custom_master_list.xml
+++ b/app/src/main/res/layout/fragment_custom_master_list.xml
@@ -111,7 +111,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_vertical">
 
-                                    <com.hbb20.CountryCodePicker
+                                    <com.countrypicker.CountryCodePicker
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         app:customMasterCountries="US,IN,NZ,BD,PL,RO,ZW"
@@ -197,7 +197,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
 
-                            <com.hbb20.CountryCodePicker
+                            <com.countrypicker.CountryCodePicker
                                 android:id="@+id/ccp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content" />
